RESOLVED FIXED239606
AX ITM: Table row objects should return a non-null unignored parent even when a table object is not found in its ancestry.
https://bugs.webkit.org/show_bug.cgi?id=239606
Summary AX ITM: Table row objects should return a non-null unignored parent even when...
Andres Gonzalez
Reported 2022-04-21 07:44:06 PDT
AX ITM: Table row objects should return a non-null unignored parent even when a table object is not found in its ancestry.
Attachments
Patch (17.96 KB, patch)
2022-04-21 08:00 PDT, Andres Gonzalez
no flags
Patch (18.44 KB, patch)
2022-04-21 08:30 PDT, Andres Gonzalez
no flags
Patch (19.30 KB, patch)
2022-04-22 13:22 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-21 07:44:20 PDT
Andres Gonzalez
Comment 2 2022-04-21 08:00:18 PDT
Andres Gonzalez
Comment 3 2022-04-21 08:30:25 PDT
Created attachment 458064 [details] Patch Fix for GTK and WPE builds.
Andres Gonzalez
Comment 4 2022-04-22 13:22:24 PDT
Created attachment 458168 [details] Patch Updating expectations for glib test.
EWS
Comment 5 2022-04-23 09:31:38 PDT
Committed r293291 (249916@main): <https://commits.webkit.org/249916@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458168 [details].
Note You need to log in before you can comment on or make changes to this bug.