Source/WebCore/accessibility/AccessibilityTableCell.h
@@ -65,7 +65,7 @@ protected:
     AccessibilityTableRow* parentRow() const;
     virtual AccessibilityTable* parentTable() const;
     AccessibilityRole determineAccessibilityRole() final;
-    AXCoreObject* parentObjectUnignored() const override;
+    AccessibilityObject* parentObjectUnignored() const override;
 
     int m_rowIndex;
     int m_axColIndexFromRow;
